# Trading

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  adaptive_timeframe.py  advanced_debugger.py  analysis_models_tickets.md  analyze_current_data.py  app.py  app_core.py  app_debug.py  app_enhanced.py  app_enhanced_minimal.py  app_enhanced_visual.py  app_minimal.py  app_optimized.py  app_optimized_backup.py  app_optimized_clean.py  app_simple.py  apply_model_to_latest_data.py  backtester.py  backtesting.py  backtesting_framework.md  coinglass_api.py  coinglass_scraper_example.py  config.py  create_issues.py  create_project_tickets.py  cross_asset_analysis.py  cross_asset_analyzer.py  cursor_prompt.md  data_collection.py  data_collection_pipeline.py  data_collection_tickets.md  data_fetcher.py  data_sources_for_model.md  data_sources_summary.md  debug_analysis.py  enhanced_backtester.py  (+63 more)
.github/workflows/: setup_project_board.yml
debug_output_20250903_201222/: analysis_summary.txt
docs/: development_guide.md
src/: README.md  __init__.py  app.py  run_tests.py
src/api/: README.md  __init__.py
src/config/: README.md  __init__.py  config.py  config_test.py  defaults.py  validators.py
src/core/: README.md  __init__.py  app.py
src/models/: README.md  __init__.py  base_model.py  cvd_analyzer.py  cvd_analyzer_test.py  delta_volume_analyzer.py  delta_volume_analyzer_test.py  funding_rate_analyzer.py  funding_rate_analyzer_test.py  gamma_exposure_analyzer.py  gamma_exposure_analyzer_test.py  liquidation_map_analyzer.py  liquidation_map_analyzer_test.py  macro_events_analyzer.py  macro_events_analyzer_test.py  open_interest_analyzer.py  open_interest_analyzer_test.py  (+2 more)
(+52 files in other folders)
